# code_templates

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  bash_adv.sh  bash_simp.sh
c/: c_adv.c  c_header_adv.c  c_simp_hdr.c
cpp/: cpp_adv.cpp  cpp_header_adv.cpp  cpp_simp_hdr.cpp
python/: py_adv.py
webdev/: css.css  html_adv.html  html_simp.html  script.js
